--- a/index.html
+++ b/index.html
@@ -179,3 +179,13 @@ function showError(message) {
     }
 }
 </style>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'bc962847e204336f4ec26e73034f79ec',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/bc962847e204336f4ec26e73034f79ec/invoke.js"></script>
